<resources>
    <string name="app_name">ShugaTrak</string>
    <string name="title_section1">Measures</string>
    <string name="title_section2">Settings</string>
    <string name="title_section3">Measurements</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fragment_measurement">FragmentMeasurementActivity</string>
    <string name="title_activity_fragment_settings">FragmentSettingsActivity</string>
    <string name="title_activity_fragment_levels">FragmentLevelsActivity</string>
    <string name="MeasureType">mg/dL</string>
    <string name="refresh">swipe down to refresh</string>
    <string name="con">Connected to: </string>
    <string name="discon">not connected to any device</string>
    <string name="user">User Name</string>
    <string name="pass">Password</string>
    <string name="verifyButtonDescription">verify</string>
    <string name="changeButton">select meter</string>
    <string name="setupButton">set up adapter</string>
    <string name="adapter_not_set_up">adapter not set up</string>
    <string name="adapter_is_set_up">adapter is set up</string>
    <string name="connected_to_adapter">communicating with adapter</string>
    <string name="connecting_to_adapter">connecting to adapter</string>
    <string name="communicating_with_adapter">communicating with adapter</string>
    <string name="requesting_readings">requesting readings</string>
    <string name="transferring_readings">transferring readings</string>
    <string name="bluetooth_is_off">Bluetooth is off</string>
    <string name="goto_reading_screen">please go to the Reading screen</string>
    <string name="AboutButtonDescription">about shugatrak</string>
    <string name="Shuga">ShugaTrak</string>
    <string name="diagnostics_sent_to_shugatrak">diagnostics uploaded to Shugatrak.com</string>
    <string name="DiagnoseButtonDescription">Send Report</string>
    <string name="tab">Tab view</string>
    <string name="press_adapter_button">press adapter button</string>
    <string name="retry">Try again</string>
    <string name="meter_not_responding">Meter is not responding. Check adapter cable and meter battery and make sure meter is off.</string>
    <string name="AboutInfo">Version: 1.3.12
        \nBuild: 370

        \n\n\nTips for the Reading Screen:
        \nSwipe down for new readings
        \nSwipe up to get all readings\n
        \n\nwww.shugatrak.com
        \nSounds provided by:
        \nhttp://www.freesfx.co.uk \n
        \u00A9 2015 Applivate, LLC</string>
</resources>